Added Infinite Scroll. Finalized the app.

--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "dotenv": "^6.1.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-infinite-scroll-component": "^4.2.0",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^3.4.6"
+    "reselect": "^4.0.0",
+    "styled-components": "^3.4.6",
+    "timeago.js": "^4.0.0-beta.1",
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
