--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "hn-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kikojumkd.github.io/hacker-news-clone",
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^6.1.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-infinite-scroll-component": "^4.2.0",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
